# shp-plugin-manager

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: release.yml
Source/: ElevationHelper.cpp  ElevationHelper.h  InstallManager.cpp  InstallManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  MainWindow.cpp  MainWindow.h  PluginCardComponent.cpp  PluginCardComponent.h  PluginInfo.h  RegistryClient.cpp  RegistryClient.h  Settings.cpp  Settings.h  SettingsPage.cpp  SettingsPage.h  ShpLookAndFeel.cpp  ShpLookAndFeel.h  Theme.h  UpdateChecker.cpp  UpdateChecker.h  VersionTracker.cpp  VersionTracker.h
packaging/: installer.iss
